--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: "Montserrat", sans-serif;
-  background-color: #1a1a1a;
+  background-color: #fff;
 }
 
 .cursor {
@@ -138,8 +138,9 @@ body {
 
 p {
   margin: auto;
+  color:#2b2929;
   font-weight: 300;
-  animation: lights 3.5s 750ms linear;
+  animation: lights 2.5s 750ms linear;
 }
 
 /* Slider animations */
